apps/labtop-info/deployent.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: labtop-info
  namespace: argo-cd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: labtop-info
  template:
    metadata:
      labels:
        app: labtop-info
    spec:
      containers:
      - name: labtop-info
        image: nginx:latest
        lifecycle:
          postStart:
            exec:
              command: ["/bin/sh", "-c", "cp /html/ /usr/share/nginx/html/labtop/ -r && sed -i s/argo2replace/\"user: admin password: ${ARGOCD_ADMIN_PASS}\"/g  /usr/share/nginx/html/labtop/index.html"]
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config
          mountPath: /etc/nginx/conf.d
        - name: html
          mountPath: /html
      volumes:
      - name: config
        configMap:
          name: nginx-config
      - name: html
        configMap:
          name: nginx-html
