apps/labtop-info/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: labtop-info
  namespace: argo-cd
spec:
  selector:
    app: labtop-info
  sessionAffinity: None
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  type: ClusterIP
